--- a/package.json
+++ b/package.json
@@ -16,28 +16,37 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.8",
+    "@web3auth/base": "^8.5.0",
+    "@web3auth/modal": "^8.5.0",
     "@web3auth/react-native-sdk": "^5.1.0",
+    "@web3auth/solana-provider": "^8.5.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "crypto-js": "3.1.9-1",
+    "empty-module": "^0.0.2",
     "expo": "~51.0.2",
     "expo-constants": "~16.0.1",
+    "expo-crypto": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.12",
     "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
+    "i18next": "^23.11.4",
     "nativewind": "^2.0.11",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-native": "0.74.1",
     "react-native-crypto": "^2.2.0",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.12.3",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "stream-browserify": "^3.0.0",
-    "expo-crypto": "~13.0.2"
+    "readable-stream": "^4.5.2",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
